Adiciona hosts na confiv/environment

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_DEBUG=true
-APP_URL=https://localhost/amigoprogramador
+APP_URL=http://amigoprogramador.localhost
 APP_KEY=lQCfE1G3tfsCLUfALUpAz8CMpZLhlOXZ
 
 DB_CONNECTION=mysql
